[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "wheel",
    "toml",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]

[project]
name = "mcts_tsp"
version = "0.0.3"
description = "A python wrapper for MCTS TSP solver"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Xuanhao Pan", email = "xuanhaopan@link.cuhk.edu.cn"},
]

[project.urls]
Homepage = "https://github.com/neo-pan/mcts_tsp"

[tool.setuptools]
packages = ["mcts_tsp"]